moved images to one folder

--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <body>
         <div class="login-container">
             <form action="" class="login-form">
-                <img src="img/popcorn-icon.png" alt="">
+                <img src="images/popcorn-icon.png" alt="">
                 <h2>Login</h2>
                 <div class="input-group">
                     <input type="text" name="loginUsername" id="loginUsername" required autofocus>
