--- a/admin-profile.html
+++ b/admin-profile.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Admin Profile</title>
         <link rel="stylesheet" href="style/admin_style.css" type="text/css">
+        <link rel="stylesheet" href="style/admin-profile_style.css" type="text/css">
         <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     </head>
 
