--- a/create-admin.html
+++ b/create-admin.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Create New Admin</title>
-        <link rel="stylesheet" href="style/admin_style.css" type="text/css">
+        <link rel="stylesheet" href="style/sidebar_style.css" type="text/css">
         <link rel="stylesheet" href="style/create-admin_style.css" type="text/css">
         <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     </head>
