--- a/manage-promo.html
+++ b/manage-promo.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Manage Promotions</title>
-        <link rel="stylesheet" href="style/admin_style.css" type="text/css">
+        <link rel="stylesheet" href="style/sidebar_style.css" type="text/css">
         <link rel="stylesheet" href="style/manage-promo_style.css" type="text/css">
         <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     </head>
