--- a/order-confirmation.html
+++ b/order-confirmation.html
@@ -29,6 +29,7 @@
             <p class="confirmation-massage">
                 Your order was successful!
             </p>
+            <p>You have [AMOUNT] tickets for seats: [SEAT NUMBER]</p>
         </div>
         <div class="receipt">
             <p class="receipt-header">Order Summary</p>
