orion front end

--- a/pick-ticket-type.html
+++ b/pick-ticket-type.html
@@ -29,29 +29,33 @@
         </div>
     </div>
     <div class="ticket-wrapper">
-        <div class="ticket-container"> 
-            <button class="minus-btn"><i class="far fa-minus-square"></i></button>
-            <div class="ticket-info">
-                <p>Adult Ticket</p>
-                <p>$9.00</p>
+        <div class="ticket-box">
+
+            <div class="ticket-container"> 
+                <button class="minus-btn"><i class="far fa-minus-square"></i></button>
+                <div class="ticket-info">
+                    <p>Adult Ticket</p>
+                    <p>$9.00</p>
+                </div>
+                <button class="plus-btn"><i class="far fa-plus-square"></i></button>
             </div>
-            <button class="plus-btn"><i class="far fa-plus-square"></i></button>
+            <div class="ticket-container"> 
+                <button class="minus-btn"><i class="far fa-minus-square"></i></button>
+                <div class="ticket-info">
+                    <p>Child Ticket</p>
+                    <p>$6.50</p>
+                </div>
+                <button class="plus-btn"><i class="far fa-plus-square"></i></button>
+            </div><div class="ticket-container"> 
+                <button class="minus-btn"><i class="far fa-minus-square"></i></button>
+                <div class="ticket-info">
+                    <p>Senior Ticket</p>
+                    <p>$7.00</p>
+                </div>
+                <button class="plus-btn"><i class="far fa-plus-square"></i></button>
+            </div>
         </div>
-        <div class="ticket-container"> 
-            <button class="minus-btn"><i class="far fa-minus-square"></i></button>
-            <div class="ticket-info">
-                <p>Child Ticket</p>
-                <p>$6.50</p>
-            </div>
-            <button class="plus-btn"><i class="far fa-plus-square"></i></button>
-        </div><div class="ticket-container"> 
-            <button class="minus-btn"><i class="far fa-minus-square"></i></button>
-            <div class="ticket-info">
-                <p>Senior Ticket</p>
-                <p>$7.00</p>
-            </div>
-            <button class="plus-btn"><i class="far fa-plus-square"></i></button>
-        </div>
+        
     </div>
     
     <div class="footer">
