--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>User Profile</title>
-        <link rel="stylesheet" href="style/admin_style.css" type="text/css">
+        <link rel="stylesheet" href="style/sidebar_style.css" type="text/css">
         <link rel="stylesheet" href="style/profile_style.css" type="text/css">
         <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     </head>
@@ -16,7 +16,7 @@
                 <ul>
                     <li id="active"><a href=""><i class="las la-user"></i> Profile</a></li>
                     <li><a href=""><i class="las la-history"></i> Order History</a></li>
-                    <li><a href=""><i class="las la-credit-card"></i> Payment Method</a></li>
+                    <li><a href=""><i class="las la-credit-card"></i> My Payment Method</a></li>
                     <li><a href=""><i class="las la-sign-out-alt"></i> Sign Out</a></li>
                 </ul>
             </div>
