--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <div class="navbar">
         <div class="navbar-container">
             <div class="title-container">
-                <a href="#home" class="title navbar-btn">Cinema E-Booking System</a>
+                <a href="index.html" class="title navbar-btn">Cinema E-Booking System</a>
             </div>
             <div class="search-bar-container">
                 <input type="text" class="search-bar" placeholder="Search..">
                 <button class="navbar-btn search-btn"><i class="fas fa-search"></i></button>
             </div>
             <div class="profile-container">
-                <button class="navbar-btn profile"><i class="fas fa-user-circle"></i></button>
-                <a href="#sign-in" class="navbar-btn sign-in-text">Sign-in</a>
+                <a href="profile.html" class="navbar-btn profile"><i class="fas fa-user-circle"></i></a>
+                <a href="login.html" class="navbar-btn sign-in-text">Sign-in</a>
             </div>
         </div>
     </div>
@@ -38,7 +38,10 @@
                     et ultrices neque ornare aenean. In pellentesque massa placerat duis ultricies 
                     lacus sed turpis tincidunt.
                 </p>
-                <button class="get-tickets-btn">Get Tickets <i class="fas fa-chevron-right"></i></button>
+                <a href="Showtimes.html">
+                    <button class="get-tickets-btn">Get Tickets <i class="fas fa-chevron-right"></i></button>
+                </a>
+                
             </div>
             
             <div class="movie-bar-container">
@@ -50,36 +53,67 @@
                             <p class="movie-item-title">
                                 Movie Name
                             </p>
-                            <button class="get-tickets-btn">
-                                Get Tickets <i class="fas fa-chevron-right"></i>
-                            </button>
+                            <a href="Showtimes.html">
+                                <button class="get-tickets-btn">
+                                    Get Tickets <i class="fas fa-chevron-right"></i>
+                                </button>
+                            </a>
+                            <a href="movie-info.html">
+                                <button class="get-tickets-btn">
+                                    More Info <i class="fas fa-chevron-right"></i>
+                                </button>
+                            </a>
+
                         </div>
                         <div class="movie-bar-item">
                             <img class="movie-item-img" src="images/default-movie-image.png">
                             <p class="movie-item-title">
                                 Movie Name
                             </p>
-                            <button class="get-tickets-btn">
-                                Get Tickets <i class="fas fa-chevron-right"></i>
-                            </button>
+                            <a href="Showtimes.html">
+                                <button class="get-tickets-btn">
+                                    Get Tickets <i class="fas fa-chevron-right"></i>
+                                </button>
+                            </a>
+                            <a href="movie-info.html">
+                                <button class="get-tickets-btn">
+                                    More Info <i class="fas fa-chevron-right"></i>
+                                </button>
+                            </a>
                         </div>
                         <div class="movie-bar-item">
                             <img class="movie-item-img" src="images/default-movie-image.png">
                             <p class="movie-item-title">
                                 Movie Name
                             </p>
-                            <button class="get-tickets-btn">
-                                Get Tickets <i class="fas fa-chevron-right"></i>
-                            </button>
+                            <a href="Showtimes.html">
+                                <button class="get-tickets-btn">
+                                    Get Tickets <i class="fas fa-chevron-right"></i>
+                                </button>
+                            </a>
+                            <a href="movie-info.html">
+                                <button class="get-tickets-btn">
+                                    More Info <i class="fas fa-chevron-right"></i>
+                                </button>
+                            </a>
+
                         </div>
                         <div class="movie-bar-item">
                             <img class="movie-item-img" src="images/default-movie-image.png">
                             <p class="movie-item-title">
                                 Movie Name
                             </p>
-                            <button class="get-tickets-btn">
-                                Get Tickets <i class="fas fa-chevron-right"></i>
-                            </button>
+                            <a href="Showtimes.html">
+                                <button class="get-tickets-btn">
+                                    Get Tickets <i class="fas fa-chevron-right"></i>
+                                </button>
+                            </a>
+                            <a href="movie-info.html">
+                                <button class="get-tickets-btn">
+                                    More Info <i class="fas fa-chevron-right"></i>
+                                </button>
+                            </a>
+
                         </div>
 
                     </div>
@@ -95,36 +129,45 @@
                             <p class="movie-item-title">
                                 Movie Name
                             </p>
-                            <button class="get-tickets-btn">
-                                More Info <i class="fas fa-chevron-right"></i>
-                            </button>
+                            <a href="movie-info.html">
+                                <button class="get-tickets-btn">
+                                    More Info <i class="fas fa-chevron-right"></i>
+                                </button>
+                            </a>
+
                         </div>
                         <div class="movie-bar-item">
                             <img class="movie-item-img" src="images/default-movie-image.png">
                             <p class="movie-item-title">
                                 Movie Name
                             </p>
-                            <button class="get-tickets-btn">
-                                More Info <i class="fas fa-chevron-right"></i>
-                            </button>
+                            <a href="movie-info.html">
+                                <button class="get-tickets-btn">
+                                    More Info <i class="fas fa-chevron-right"></i>
+                                </button>
+                            </a>
                         </div>
                         <div class="movie-bar-item">
                             <img class="movie-item-img" src="images/default-movie-image.png">
                             <p class="movie-item-title">
                                 Movie Name
                             </p>
-                            <button class="get-tickets-btn">
-                                More Info <i class="fas fa-chevron-right"></i>
-                            </button>
+                            <a href="movie-info.html">
+                                <button class="get-tickets-btn">
+                                    More Info <i class="fas fa-chevron-right"></i>
+                                </button>
+                            </a>
                         </div>
                         <div class="movie-bar-item">
                             <img class="movie-item-img" src="images/default-movie-image.png">
                             <p class="movie-item-title">
                                 Movie Name
                             </p>
-                            <button class="get-tickets-btn">
-                                More Info <i class="fas fa-chevron-right"></i>
-                            </button>
+                            <a href="movie-info.html">
+                                <button class="get-tickets-btn">
+                                    More Info <i class="fas fa-chevron-right"></i>
+                                </button>
+                            </a>
                         </div>
 
                     </div>
