--- a/movie-info.html
+++ b/movie-info.html
@@ -14,13 +14,17 @@
 <body>
     <div class="navbar">
         <div class="navbar-container">
-            <button class="navbar-btn go-back">
-                <i class="fas fa-chevron-left"></i>
-            </button> 
+            <a href="index.html">
+                <button class="navbar-btn go-back">
+                    <i class="fas fa-chevron-left"></i>
+                </button> 
+            </a>
             <p class="navbar-title">SHANG-CHI AND THE LEGEND OF THE TEN RINGS</p>
-            <button class="navbar-btn exit">
-                <i class="fas fa-times"></i>
-            </button>
+            <a href="index.html">
+                <button class="navbar-btn exit">
+                    <i class="fas fa-times"></i>
+                </button>
+            </a>
         </div>
     </div>
     
