--- a/order-confirmation.html
+++ b/order-confirmation.html
@@ -16,9 +16,11 @@
             <button class="navbar-btn go-back">
                 <i class="fas fa-chevron-left"></i>
             </button> 
-            <button class="navbar-btn exit">
-                <i class="fas fa-times"></i>
-            </button>
+            <a href="index.html">
+                <button class="navbar-btn exit">
+                    <i class="fas fa-times"></i>
+                </button>
+            </a>
         </div>
     </div>
     <div class="container">
