--- a/Showtimes.html
+++ b/Showtimes.html
@@ -20,9 +20,11 @@
                 <i class="fas fa-chevron-left"></i>
             </button> 
             <p class="navbar-title">SHOWTIMES</p>
-            <button class="navbar-btn exit">
-                <i class="fas fa-times"></i>
-            </button>
+            <a href="index.html">
+                <button class="navbar-btn exit">
+                    <i class="fas fa-times"></i>
+                </button>
+            </a>
         </div>
     </div>
 
@@ -94,7 +96,11 @@
             </div>
         </div>
     </div>
-
+    <div class="footer">
+        <a href="pick-ticket-type.html" class="continue">
+            Continue <i class="fas fa-chevron-right"></i>
+        </a>
+    </div>
 </body>
     
 
