--- a/select-seats.html
+++ b/select-seats.html
@@ -10,13 +10,17 @@
 <body>
     <div class="navbar">
         <div class="navbar-container">
-            <button class="navbar-btn go-back">
-                <i class="fas fa-chevron-left"></i>
-            </button> 
+            <a href="pick-ticket-type.html">
+                <button class="navbar-btn go-back">
+                    <i class="fas fa-chevron-left"></i>
+                </button> 
+            </a>
             <p class="navbar-title">Select Seats</p>
-            <button class="navbar-btn exit">
-                <i class="fas fa-times"></i>
-            </button>
+            <a href="index.html">
+                <button class="navbar-btn exit">
+                    <i class="fas fa-times"></i>
+                </button>
+            </a>
         </div>
     </div>
 
