changed files to have the same fonts

--- a/login.html
+++ b/login.html
@@ -5,7 +5,9 @@
         <link rel="stylesheet" href="style/login_style.css" type="text/css">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <title>Login</title>
-    
+        <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E
+        <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     </head>
 
     <body>
