--- a/payment-method.html
+++ b/payment-method.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="style/sidebar_style.css" type="text/css">
         <link rel="stylesheet" href="style/payment-method_style.css" type="text/css">
         <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E
+        <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -21,7 +24,7 @@
                 </ul>
             </div>
             <div class="main-container">
-                <div class="header"><h1>My Subscription</h1><br></div>
+                <div class="header"><h1>My Payment Information</h1><br></div>
                 <div class="profile">
                     <label for="username">Billing Address:</label>
                     [ADDRESS]<br><br>
