--- a/create-account.html
+++ b/create-account.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <title>Create a New Account</title>
         <link rel="stylesheet" href="style/create-account_style.css" type="text/css">
+        <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E
+        <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     </head>
 
     <body>
