orion front end

--- a/confrim-order.html
+++ b/confrim-order.html
@@ -46,25 +46,42 @@
 
         </div>
 
-        <div class="order-container">
-            <div class="order-summary">
-                <div class="order-item">
-                    <p>Tickets</p>
-                    <div class="edit-ticket">
-                        <a href="">Edit</a>
-                    </div>
-                    
+        <div class="receipt">
+            
+            <div class="item-total-container">
+                <div class="items">
+                    <h3 class="header">Tickets</h3>
+                    <br>
+                    <br>
+                    <p>Adult x 1</p>
+                    <p>Child x 2</p>
+                    <p>Service</p>
+                    <p>Taxes</p>
+                    <hr class="line">
+                    <p>Total</p>
                 </div>
-
-
+                <div class="prices">
+                    <h3><a href="" class="edit">Edit</a></h3>
+                    <br>
+                    <br>
+                    <p>$9.00</p>
+                    <p>$13.00</p>
+                    <p>$2.00</p>
+                    <p>$1.54</p>
+                    <hr class="line2">
+                    <p>$25.54</p>
+                </div>
             </div>
         </div>
 
 
 
-
-
     </div>
+
+    <div class="footer">
+        <button class="footer-btn">Purchase</i></button>
+    </div>
+
 
 </body>
 </html>
