--- a/admin-profile.html
+++ b/admin-profile.html
@@ -18,11 +18,11 @@
                 <img src="images/popcorn-icon.png" alt="">
                 <h4>Welcome, [Name]!</h4>
                 <ul>
-                    <li id="active"><a href=""><i class="las la-user-tie"></i> Profile</a></li>
-                    <li><a href=""><i class="las la-film"></i> Manage Movies</a></li>
-                    <li><a href=""><i class="las la-money-check-alt"></i> Manage Promotions</a></li>
-                    <li><a href=""><i class="las la-users"></i> Manage Users</a></li>
-                    <li><a href=""><i class="las la-user-plus"></i> Create New Admin</a></li>
+                    <li id="active"><a href="admin-profile.html"><i class="las la-user-tie"></i> Profile</a></li>
+                    <li><a href="manage-movies.html"><i class="las la-film"></i> Manage Movies</a></li>
+                    <li><a href="manage-promo.html"><i class="las la-money-check-alt"></i> Manage Promotions</a></li>
+                    <li><a href="manage-users.html"><i class="las la-users"></i> Manage Users</a></li>
+                    <li><a href="create-admin.html"><i class="las la-user-plus"></i> Create New Admin</a></li>
                     <li><a href=""><i class="las la-sign-out-alt"></i> Sign Out</a></li>
                 </ul>
             </div>
