--- a/payment-method.html
+++ b/payment-method.html
@@ -17,9 +17,9 @@
                 <img src="images/popcorn-icon.png" alt="">
                 <h4>Welcome, [Name]!</h4>
                 <ul>
-                    <li><a href=""><i class="las la-user"></i> Profile</a></li>
+                    <li><a href="profile.html"><i class="las la-user"></i> Profile</a></li>
                     <li><a href=""><i class="las la-history"></i> Order History</a></li>
-                    <li id="active"><a href=""><i class="las la-credit-card"></i> My Payment Method</a></li>
+                    <li id="active"><a href="payment-method.html"><i class="las la-credit-card"></i> My Payment Method</a></li>
                     <li><a href=""><i class="las la-sign-out-alt"></i> Sign Out</a></li>
                 </ul>
             </div>
