--- a/checkout.html
+++ b/checkout.html
@@ -32,6 +32,14 @@
     </div>
 
     <div class="content-container">
+        <div class="existing-payment">
+            <h3>Use Existing Payment</h3>
+            <br>
+            <div class="template-card">
+                <p>Mastercard ************6245 </p>
+                <button class="use-card">Use</button>
+            </div>
+        </div>
         <div class="left-container">
             <div class="billing-address">
                 <h3>Billing Address</h3>
