--- a/Showtimes.html
+++ b/Showtimes.html
@@ -16,9 +16,12 @@
 <body>
     <div class="navbar">
         <div class="navbar-container">
-            <button class="navbar-btn go-back">
-                <i class="fas fa-chevron-left"></i>
-            </button> 
+            <a href="movie-info.html">
+                <button class="navbar-btn go-back">
+                    <i class="fas fa-chevron-left"></i>
+                </button> 
+            </a>
+ 
             <p class="navbar-title">SHOWTIMES</p>
             <a href="index.html">
                 <button class="navbar-btn exit">
