--- a/movie-info.html
+++ b/movie-info.html
@@ -45,9 +45,9 @@
                 PG13
             </p>
         </div>
-        <button class="get-tickets-btn">
-            Get Tickets <i class="fas fa-chevron-right"></i>
-        </button>
+        <a href="Showtimes.html">
+            <button class="get-tickets-btn">Get Tickets <i class="fas fa-chevron-right"></i></button>
+        </a>
 
         <div class="movie-descripton-container">
             <p class="description-header">
