--- a/order-confirmation.html
+++ b/order-confirmation.html
@@ -11,18 +11,6 @@
     <title>Order Confirmation</title>
 </head>
 <body>
-    <div class="navbar">
-        <div class="navbar-container">
-            <button class="navbar-btn go-back">
-                <i class="fas fa-chevron-left"></i>
-            </button> 
-            <a href="index.html">
-                <button class="navbar-btn exit">
-                    <i class="fas fa-times"></i>
-                </button>
-            </a>
-        </div>
-    </div>
     <div class="container">
         <div class="confirmation">
             <p class="confirmation-number">
@@ -32,6 +20,11 @@
                 Your order was successful!
             </p>
             <p>You have [AMOUNT] tickets for seats: [SEAT NUMBER]</p>
+            <a href="index.html">
+                <button class="go-home">
+                    Go Back to Home Page <i class="fas fa-home"></i>
+                </button>
+            </a>
         </div>
         <div class="receipt">
             <p class="receipt-header">Order Summary</p>
