--- a/profile.html
+++ b/profile.html
@@ -5,13 +5,28 @@
         <title>User Profile</title>
         <link rel="stylesheet" href="style/sidebar_style.css" type="text/css">
         <link rel="stylesheet" href="style/profile_style.css" type="text/css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
         <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E
+        <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     </head>
 
     <body>
+        <div class="navbar">
+            <div class="navbar-container">
+                <a href="index.html" class="go-back">
+                    <button class="navbar-btn">
+                        <i class="fas fa-chevron-left"></i>
+                    </button> 
+                </a>
+                <a href="index.html" class="navbar-btn exit">
+                    <button class="navbar-btn">
+                        <i class="fas fa-times"></i>
+                    </button>
+                </a>
+            </div>
+        </div>
         <div class="container">
             <div class="sidebar">
                 <img src="images/popcorn-icon.png" alt="">
